File Output Node seems to save only black images into OpenEXR image data #46617

Closed
opened 2015-10-27 18:56:47 +01:00 by Rainer Trummer · 8 comments

System Information
Windows 7 x64, Quadro 2000

Blender Version
Broken: 2.76ff
Worked: 2.74, maybe also 2.75

Short description of error
TEST.blend
When I output my files into openEXR using a file output node, I only get black renders. The Alpha Channel is correct however. Output to PNG works fine.

Exact steps for others to reproduce the error
Download the file, open it and render. The file Output Node which outputs the PNG works as expected, the OpenEXR one always outputs a black image.

**System Information** Windows 7 x64, Quadro 2000 **Blender Version** Broken: 2.76ff Worked: 2.74, maybe also 2.75 **Short description of error** [TEST.blend](https://archive.blender.org/developer/F247749/TEST.blend) When I output my files into openEXR using a file output node, I only get black renders. The Alpha Channel is correct however. Output to PNG works fine. **Exact steps for others to reproduce the error** Download the file, open it and render. The file Output Node which outputs the PNG works as expected, the OpenEXR one always outputs a black image.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer

Added subscriber: @Sergey

Added subscriber: @Sergey

Can confirm multilayer exr does not do file output. Single layer ones works tho.

Will have a look later.

Can confirm multilayer exr does not do file output. Single layer ones works tho. Will have a look later.
Sergey Sharybin self-assigned this 2015-10-27 19:05:35 +01:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was unassigned by Dalai Felinto 2015-10-28 13:35:15 +01:00
Dalai Felinto self-assigned this 2015-10-28 13:35:15 +01:00

I'll take a look at that

I'll take a look at that

This issue was referenced by 20a94e956a

This issue was referenced by 20a94e956a3532ea1f8c58d745f14fab1881ba80

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46617
No description provided.